--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div style="margin-top:12px;text-align:center">
-        <a href="dashboard.html" class="btn-outline">Probar sin login (demo)</a>
+        <a href="jdashboard.html" class="btn-outline">Probar sin login (demo)</a>
       </div>
     </div>
   </main>
