--- a/jdashboard.html
+++ b/jdashboard.html
@@ -15,7 +15,7 @@
     <nav>
       <span id="userName" class="muted"></span>
       <a class="btn-yellow" href="reporte.html">Nuevo reporte</a>
-      <a class="btn-outline" href="historial.html">Historial</a>
+      <a class="btn-outline" href="shistorial.html">Historial</a>
       <button id="btnSignOut" class="btn-outline">Salir</button>
     </nav>
   </header>
