Update and rename historial.html to shistorial.html

--- a/shistorial.html
+++ b/shistorial.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div><h1>Historial de Reportes</h1></div>
     <nav>
-      <a href="dashboard.html" class="btn-outline">Dashboard</a>
+      <a href="jdashboard.html" class="btn-outline">Dashboard</a>
       <button id="btnSignOut3" class="btn-outline">Salir</button>
     </nav>
   </header>
