--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-  <script src="main.js"></script>
+<script src="main.js"></script>
+<script src="js/ocr.js"></script>
+<script src="js/excel.js"></script>
+
 </body>
 </html>
