--- a/jdashboard.html
+++ b/jdashboard.html
@@ -51,5 +51,8 @@
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
   <script src="main.js"></script>
+<script src="js/ocr.js"></script>
+<script src="js/excel.js"></script>
+
 </body>
 </html>
