--- a/shistorial.html
+++ b/shistorial.html
@@ -34,6 +34,8 @@
   <!-- libs -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-  <script src="main.js"></script>
+ <script src="main.js"></script>
+<script src="js/ocr.js"></script>
+<script src="js/excel.js"></script>
 </body>
 </html>
