--- a/reporte.html
+++ b/reporte.html
@@ -10,8 +10,8 @@
   <header class="header">
     <h1>Nuevo Reporte</h1>
     <nav>
-      <a href="dashboard.html" class="btn-outline">Dashboard</a>
-      <a href="historial.html" class="btn-outline">Historial</a>
+      <a href="jdashboard.html" class="btn-outline">Dashboard</a>
+      <a href="shistorial.html" class="btn-outline">Historial</a>
       <button id="btnSignOut2" class="btn-outline">Salir</button>
     </nav>
   </header>
