--- a/jdashboard.html
+++ b/jdashboard.html
@@ -23,7 +23,7 @@
   <main class="container">
     <section class="card">
       <h2>Histórico de gastos por mes</h2>
-      <canvas id="graficaGastos" height="120"></canvas>
+      <canvas id="graficaGastos" height="160"></canvas>
     </section>
 
     <section class="card">
@@ -45,18 +45,14 @@
   </main>
 
   <!-- libs -->
-<!-- Supabase -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-<!-- OCR -->
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-
-<!-- Excel -->
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-
-<!-- Tu código -->
-<script src="js/ocr.js"></script>
-<script src="js/excel.js"></script>
-<script src="main.js"></script>
+  <!-- app scripts -->
+  <script src="js/ocr.js"></script>
+  <script src="js/excel.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
