--- a/reporte.html
+++ b/reporte.html
@@ -7,198 +7,86 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="header">
-    <h1>Nuevo Reporte</h1>
-    <nav>
-      <a href="jdashboard.html" class="btn-outline">Dashboard</a>
-      <a href="shistorial.html" class="btn-outline">Historial</a>
-      <button id="btnSignOut2" class="btn-outline">Salir</button>
-    </nav>
-  </header>
 
-  <main class="container">
-    <section class="card">
-      <h2>Crear reporte</h2>
-      <div class="form-grid">
-        <div class="field">
-          <label>Nombre del reporte</label>
-          <input id="reporteNombre" placeholder="Ej. Visita Monterrey 14-16 Dic">
-        </div>
-        <div class="field">
-          <label>Monto a comprobar (viáticos)</label>
-          <input id="montoComprobar" type="number" placeholder="3500">
-        </div>
-        <div class="field">
-          <label>Fecha</label>
-          <input id="fechaReporte" type="date">
-        </div>
-        <div class="field">
-          <label>Ejecutivo</label>
-          <input id="ejecutivoReporte" placeholder="Nombre del ejecutivo">
-        </div>
-      </div>
+<header class="header">
+  <h1>Nuevo Reporte</h1>
+  <nav>
+    <a href="jdashboard.html" class="btn-outline">Dashboard</a>
+    <button id="btnSignOut2" class="btn-outline">Salir</button>
+  </nav>
+</header>
 
-      <div class="actions">
-        <button id="btnCrearReporte" class="btn-blue">Crear Reporte</button>
-        <button id="btnLoadMyReports" class="btn-outline">Cargar mis reportes</button>
-      </div>
-    </section>
+<main class="container">
 
-    <section id="reportePanel" class="card" style="display:none;">
-      <div class="reporte-header">
-        <div>
-          <h2 id="reporteTitulo">-</h2>
-          <p id="reporteMeta" class="muted"></p>
-        </div>
-        <div class="reporte-actions">
-          <button id="btnExportReporte" class="btn-yellow">Exportar Excel</button>
-          <button id="btnCerrarReporte" class="btn-outline">Cerrar reporte</button>
-        </div>
-      </div>
-
-      <div class="totales-grid">
-        <div class="total-card"><small>Monto asignado</small><strong id="lblMontoAsignado">$0.00</strong></div>
-        <div class="total-card"><small>Total gastado</small><strong id="lblTotalGastado">$0.00</strong></div>
-        <div class="total-card"><small>Resultado</small><strong id="lblResultado">$0.00</strong></div>
-      </div>
-
-      <div class="tabs">
-        <button class="tab active" data-tab="factura">Factura / Upload</button>
-        <button class="tab" data-tab="ticket">Ticket</button>
-        <button class="tab" data-tab="manual">Manual</button>
-      </div>
-
-      <div id="factura" class="tab-content active">
-        <div class="upload-row">
-          <input id="inputFactura" type="file" accept=".xml,.pdf">
-          <button id="btnProcesarFactura" class="btn-blue">Procesar y guardar</button>
-        </div>
-        <p class="help">Sube XML CFDI (se extrae total) o PDF (se intentará OCR en la 1ª página).</p>
-      </div>
-
-      <div id="ticket" class="tab-content">
-        <div class="upload-row">
-          <input id="inputTicket" type="file" accept="image/*,.pdf">
-          <input id="ticketMonto" placeholder="Monto (opcional)">
-          <select id="ticketCategoria">
-            <option>Alimentos</option>
-            <option>Hospedaje</option>
-            <option>Transporte</option>
-            <option>Casetas</option>
-            <option>Varios</option>
-          </select>
-          <button id="btnAgregarTicket" class="btn-blue">Agregar</button>
-        </div>
-        <div id="ocrStatus" style="margin-top:8px;font-size:13px;color:var(--azul)"></div>
-      </div>
-
-      <div id="manual" class="tab-content">
-        <div class="form-grid">
-          <input id="manualConcepto" placeholder="Concepto">
-          <input id="manualMonto" type="number" placeholder="Monto">
-          <input id="manualFecha" type="date">
-          <select id="manualCategoria"><option>Alimentos</option><option>Hospedaje</option><option>Transporte</option><option>Casetas</option><option>Varios</option></select>
-        </div>
-        <div class="actions"><button id="btnAgregarManual" class="btn-blue">Agregar gasto</button></div>
-      </div>
-
-      <div class="gastos-grid" id="gastosPorCategoria"></div>
-
-      <div>
-        <h3>Gastos</h3>
-        <div id="gastosList" class="list"></div>
-      </div>
-
-      <!-- MULTI-UPLOAD BLOCKS -->
-      <div class="card" style="margin-top:12px;">
-        <h3>Carga múltiple por categoría</h3>
-
-        <!-- Alimentos -->
-        <div class="upload-block">
-          <label>Alimentos</label>
-          <input type="file" id="inputAlimentosMulti" multiple>
-          <button class="btn-primary" id="btnProcesarAlimentos">Previsualizar Alimentos</button>
-          <div id="alimentosListaPreview" class="lista-preview"></div>
-        </div>
-
-        <!-- Transporte -->
-        <div class="upload-block">
-          <label>Transporte</label>
-          <input type="file" id="inputTransporteMulti" multiple>
-          <button class="btn-primary" id="btnProcesarTransporte">Previsualizar Transporte</button>
-          <div id="transporteListaPreview" class="lista-preview"></div>
-        </div>
-
-        <!-- Hospedaje -->
-        <div class="upload-block">
-          <label>Hospedaje</label>
-          <input type="file" id="inputHospedajeMulti" multiple>
-          <button class="btn-primary" id="btnProcesarHospedaje">Previsualizar Hospedaje</button>
-          <div id="hospedajeListaPreview" class="lista-preview"></div>
-        </div>
-
-        <!-- Casetas -->
-        <div class="upload-block">
-          <label>Casetas</label>
-          <input type="file" id="inputCasetasMulti" multiple>
-          <button class="btn-primary" id="btnProcesarCasetas">Previsualizar Casetas</button>
-          <div id="casetasListaPreview" class="lista-preview"></div>
-        </div>
-
-        <!-- Varios -->
-        <div class="upload-block">
-          <label>Gastos Varios</label>
-          <input type="file" id="inputVariosMulti" multiple>
-          <button class="btn-primary" id="btnProcesarVarios">Previsualizar Varios</button>
-          <div id="variosListaPreview" class="lista-preview"></div>
-        </div>
-
-      </div>
-
-    </section>
-  </main>
-
-  <!-- PREVISUALIZACIÓN DE ARCHIVOS (MODAL) -->
-  <div id="previewModal" class="modal" style="display:none;">
-    <div class="modal-content" style="max-width:1000px;">
-      <h3>Previsualización de archivos</h3>
-
-      <table class="preview-table" id="previewTable">
-        <thead>
-          <tr>
-            <th>Archivo</th>
-            <th>Categoría</th>
-            <th>Fecha</th>
-            <th>Monto</th>
-            <th>Propina</th>
-            <th>Total</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-
-      <div style="margin-top:20px; display:flex; gap:10px; justify-content:flex-end;">
-        <button class="btn-outline" onclick="cerrarPreview()">Cancelar</button>
-        <button class="btn-primary" onclick="guardarPreview()">Guardar todo</button>
-      </div>
+  <!-- CREAR REPORTE -->
+  <section class="card">
+    <h2>Crear reporte</h2>
+    <div class="form-grid">
+      <input id="reporteNombre" placeholder="Nombre del reporte">
+      <input id="montoComprobar" type="number" placeholder="Monto a comprobar">
+      <input id="fechaReporte" type="date">
+      <input id="ejecutivoReporte" placeholder="Ejecutivo">
     </div>
-  </div>
+    <button id="btnCrearReporte" class="btn-blue">Crear reporte</button>
+  </section>
 
-  <!-- libs + pdf.js (para OCR en PDFs) -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+  <!-- PANEL REPORTE -->
+  <section id="reportePanel" class="card" style="display:none">
 
-  <!-- PDF.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <script>pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';</script>
+    <h2 id="reporteTitulo"></h2>
 
-  <!-- app scripts -->
-  <script src="js/ocr.js"></script>
-  <script src="js/excel.js"></script>
-  <script src="main.js"></script>
+    <!-- TOTALES -->
+    <div class="totales-grid">
+      <div><small>Asignado</small><strong id="lblMontoAsignado">$0</strong></div>
+      <div><small>Total gastos</small><strong id="lblTotalGastado">$0</strong></div>
+      <div><small>Diferencia</small><strong id="lblResultado">$0</strong></div>
+    </div>
+
+    <!-- FACTURA / UPLOAD (UNIFICADO + MULTI) -->
+    <div class="card" style="margin-top:16px">
+      <h3>Cargar comprobantes</h3>
+
+      <div class="upload-row">
+        <input
+          id="inputFactura"
+          type="file"
+          accept=".xml,.pdf,image/*"
+          multiple
+        >
+
+        <select id="categoriaFactura">
+          <option>Alimentos</option>
+          <option>Hospedaje</option>
+          <option>Transporte</option>
+          <option>Casetas</option>
+          <option>Varios</option>
+        </select>
+
+        <button id="btnProcesarFactura" class="btn-blue">
+          Procesar archivos
+        </button>
+      </div>
+
+      <p class="help">
+        Puedes seleccionar varios archivos. Cada archivo se guardará como un gasto independiente.
+      </p>
+    </div>
+
+    <!-- LISTA -->
+    <div class="card" style="margin-top:16px">
+      <h3>Gastos registrados</h3>
+      <div id="gastosList"></div>
+    </div>
+
+  </section>
+</main>
+
+<!-- LIBS -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+
+<!-- APP -->
+<script src="main.js"></script>
 </body>
 </html>
-
