--- a/reporte.html
+++ b/reporte.html
@@ -2,122 +2,53 @@
 <html lang="es">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Reporte de Gastos</title>
+  <title>Reporte</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header class="header">
-  <h1>Reporte de Gastos</h1>
+  <h1>Reporte</h1>
   <nav>
-    <button id="btnSignOut2" class="btn-outline">Salir</button>
+    <a href="jdashboard.html" class="btn-outline">Dashboard</a>
+    <button id="btnSignOut" class="btn-outline">Salir</button>
   </nav>
 </header>
 
 <main class="container">
 
-  <!-- CREAR REPORTE -->
-  <section class="card">
-    <h2>Crear reporte</h2>
-    <div class="form-grid">
-      <input id="reporteNombre" placeholder="Nombre del reporte">
-      <input id="montoComprobar" type="number" placeholder="Monto a comprobar">
-      <input id="fechaReporte" type="date">
-      <input id="ejecutivoReporte" placeholder="Ejecutivo">
-    </div>
-    <button id="btnCrearReporte" class="btn-blue">Crear Reporte</button>
-  </section>
+<section class="card">
+  <input id="reporteNombre" placeholder="Nombre del reporte">
+  <input id="montoComprobar" type="number" placeholder="Monto asignado">
+  <button id="btnCrearReporte" class="btn-blue">Crear</button>
+</section>
 
-  <!-- TOTALES -->
-  <section class="card">
-    <div class="totales-grid">
-      <div class="total-card">
-        <small>Monto asignado</small>
-        <strong id="lblMontoAsignado">$0.00</strong>
-      </div>
-      <div class="total-card">
-        <small>Total gastado</small>
-        <strong id="lblTotalGastado">$0.00</strong>
-      </div>
-      <div class="total-card">
-        <small>Resultado</small>
-        <strong id="lblResultado">$0.00</strong>
-      </div>
-    </div>
-  </section>
+<section id="reportePanel" class="card" style="display:none;">
+  <h2 id="reporteTitulo"></h2>
 
-  <!-- TABS -->
-  <section class="card">
-    <div class="tabs">
-      <button class="tab active" data-tab="factura">Factura / Upload</button>
-      <button class="tab" data-tab="ticket">Ticket</button>
-      <button class="tab" data-tab="manual">Manual</button>
-    </div>
+  <!-- CARGA EXISTENTE, SOLO MEJORADA -->
+  <div class="upload-row">
+    <input id="inputFactura" type="file" multiple>
+    <select id="facturaCategoria">
+      <option>Alimentos</option>
+      <option>Hospedaje</option>
+      <option>Transporte</option>
+      <option>Casetas</option>
+      <option>Varios</option>
+    </select>
+    <button id="btnProcesarFactura" class="btn-blue">Procesar</button>
+  </div>
 
-    <!-- FACTURA / UPLOAD -->
-    <div id="factura" class="tab-content active">
-
-      <h3>Cargar documentos</h3>
-
-      <div class="upload-row">
-        <input id="inputFactura" type="file" multiple accept=".xml,.pdf,image/*">
-
-        <select id="categoriaFactura">
-          <option>Alimentos</option>
-          <option>Hospedaje</option>
-          <option>Transporte</option>
-          <option>Casetas</option>
-          <option>Varios</option>
-        </select>
-
-        <button id="btnProcesarFactura" class="btn-blue">
-          Procesar archivos
-        </button>
-      </div>
-
-      <p class="help">
-        Puedes seleccionar varios archivos a la vez.
-        En <strong>Alimentos</strong> podrás capturar propina por archivo.
-      </p>
-
-      <div id="previewFactura"></div>
-    </div>
-
-    <!-- TICKET -->
-    <div id="ticket" class="tab-content">
-      <input id="inputTicket" type="file">
-      <input id="ticketMonto" placeholder="Monto">
-      <button id="btnAgregarTicket" class="btn-blue">Agregar</button>
-    </div>
-
-    <!-- MANUAL -->
-    <div id="manual" class="tab-content">
-      <input id="manualConcepto" placeholder="Concepto">
-      <input id="manualMonto" type="number" placeholder="Monto">
-      <button id="btnAgregarManual" class="btn-blue">Agregar gasto</button>
-    </div>
-
-  </section>
-
-  <!-- LISTA DE GASTOS -->
-  <section class="card">
-    <h3>Gastos cargados</h3>
-    <div id="gastosList"></div>
-  </section>
+  <div id="gastosList" class="list"></div>
+</section>
 
 </main>
 
-<!-- LIBRERÍAS -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-
-<!-- APP -->
-<script src="js/ocr.js"></script>
-<script src="js/excel.js"></script>
 <script src="main.js"></script>
-
 </body>
 </html>
 
