--- a/shistorial.html
+++ b/shistorial.html
@@ -2,44 +2,21 @@
 <html lang="es">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Historial — Gastos</title>
+  <title>Historial</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="header">
-    <div><h1>Historial de Reportes</h1></div>
-    <nav>
-      <a href="jdashboard.html" class="btn-outline">Dashboard</a>
-      <button id="btnSignOut3" class="btn-outline">Salir</button>
-    </nav>
-  </header>
 
-  <main class="container">
-    <section class="card">
-      <h2>Filtrar</h2>
-      <div class="form-grid">
-        <input id="filtroMes" type="month">
-        <select id="filtroCategoria"><option value="">Todas</option><option>Alimentos</option><option>Hospedaje</option><option>Transporte</option><option>Casetas</option><option>Varios</option></select>
-        <button id="btnFiltrar" class="btn-blue">Aplicar</button>
-      </div>
-    </section>
+<header class="header">
+  <h1>Historial</h1>
+  <a href="jdashboard.html" class="btn-outline">Dashboard</a>
+</header>
 
-    <section class="card">
-      <h2>Reportes</h2>
-      <div id="histList" class="list"></div>
-    </section>
-  </main>
+<main class="container">
+  <div id="histList" class="list"></div>
+</main>
 
-   <!-- libs -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-
-  <!-- app scripts -->
-  <script src="js/ocr.js"></script>
-  <script src="js/excel.js"></script>
-  <script src="main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
