--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
+  document.addEventListener("DOMContentLoaded", () => {
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Comprobación de Gastos - Login</title>
@@ -28,3 +29,4 @@
 <script src="main.js"></script>
 </body>
 </html>
+});
