--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html lang="es">
 <head>
-  document.addEventListener("DOMContentLoaded", () => {
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Comprobación de Gastos - Login</title>
+  <meta charset="utf-8">
+  <title>Login</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,21 +10,16 @@
 <main class="auth-container">
   <div class="auth-card">
     <h1>Comprobación de Gastos</h1>
-
-    <input id="siEmail" placeholder="Correo">
+    <input id="siEmail" type="email" placeholder="Correo">
     <input id="siPassword" type="password" placeholder="Contraseña">
     <button id="btnSignIn" class="btn-blue">Entrar</button>
   </div>
 </main>
 
+<!-- SUPABASE (OBLIGATORIO) -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-<script src="js/ocr.js"></script>
-<script src="js/excel.js"></script>
+<!-- MAIN -->
 <script src="main.js"></script>
 </body>
 </html>
-});
