--- a/jdashboard.html
+++ b/jdashboard.html
@@ -2,35 +2,42 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Reporte</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header class="header">
-  <h1>Reporte</h1>
+  <h1>Dashboard</h1>
   <nav>
-    <a href="jdashboard.html" class="btn-outline">Dashboard</a>
+    <a href="reporte.html" class="btn-outline">Nuevo reporte</a>
     <button id="btnSignOut" class="btn-outline">Salir</button>
   </nav>
 </header>
 
 <main class="container">
-  <!-- contenido del reporte -->
+  <div class="totales-grid">
+    <div class="total-card">
+      <small>Total gastado</small>
+      <strong id="kpiTotal">$0</strong>
+    </div>
+    <div class="total-card">
+      <small>Reportes</small>
+      <strong id="kpiReportes">0</strong>
+    </div>
+  </div>
+
+  <canvas id="graficaGastos" height="120"></canvas>
+
+  <h3>Mis reportes</h3>
+  <div id="dashReportesList" class="list"></div>
 </main>
 
 <!-- SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 
-<!-- OCR -->
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-
-<!-- EXCEL -->
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-
-<!-- SCRIPTS AUX -->
-<script src="js/ocr.js"></script>
-<script src="js/excel.js"></script>
+<!-- CHART (OBLIGATORIO PARA DASHBOARD) -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <!-- MAIN -->
 <script src="main.js"></script>
